package rsp;

message SrvTime {
	optional uint32 header  = 1 [default = 2002];
	required int64  srvTime = 2;
}

message EncInfo {
	optional uint32 header = 1 [default = 2003];
	required string key    = 2;
}

message LoginVerify {
	optional uint32 header    = 1 [default = 2101];
	required bool   success   = 2;
	optional string errMsg    = 3;
	required uint32 accountID = 4;
}

message RoleList {
	message RoleInfo {
		required uint64 rid  = 1;
		required string name = 2;
	}

	optional uint32   header    = 1 [default = 2102];
	required bool     success   = 2;
	optional string   errMsg    = 3;
	repeated RoleInfo roleInfos = 4;
}

message RoleData {
	optional uint32 header = 1 [default = 2103];
	required uint64 roleID = 2;
}
